# bumpkin-interpreter

./: CMakeLists.txt  LetStatement.cpp  LetStatement.hpp  Parser.cpp  Parser.hpp  PrintStatement.cpp  PrintStatement.hpp  ProgramState.cpp  ProgramState.hpp  README.md  Statement.cpp  Statement.hpp  main.cpp  test666.txt
input_files/: averager.txt  basic_prog.txt  factorial.txt  goto_test.txt  larger_program.txt  test666.txt
interpreter/: AddStatement.hpp  BumpkinException.cpp  BumpkinException.hpp  CMakeLists.txt  ComparisonValue.cpp  ComparisonValue.hpp  EndStatement.cpp  EndStatement.hpp  GoToStatement.cpp  GoToStatement.hpp  IfStatement.cpp  IfStatement.hpp  Interpreter.cpp  Interpreter.hpp  LetStatement.cpp  LetStatement.hpp  Parser.cpp  Parser.hpp  PrintStatement.cpp  PrintStatement.hpp  ProgramState.cpp  ProgramState.hpp  Statement.cpp  Statement.hpp  SubStatement.cpp  SubStatement.hpp  Type.hpp  XtraBasicException.cpp
interpreter/arithmetic/: AddStatement.cpp  AddStatement.hpp  DivStatement.cpp  DivStatement.hpp  MultStatement.cpp  MultStatement.hpp  SubStatement.hpp
interpreter/arithmetic_statements/: AddStatement.cpp  AddStatement.hpp  DivStatement.cpp  DivStatement.hpp  MultStatement.cpp  MultStatement.hpp  SubStatement.cpp  SubStatement.hpp
interpreter/control_statements/: EndStatement.cpp  EndStatement.hpp  GoSubStatement.cpp  GoSubStatement.hpp  GoToStatement.cpp  GoToStatement.hpp  IfStatement.cpp  IfStatement.hpp  LetStatement.cpp  LetStatement.hpp  PrintStatement.cpp  PrintStatement.hpp  ReturnStatement.cpp  ReturnStatement.hpp
interpreter/enumerations/: LineLabelType.hpp  RelationalOperator.hpp  VariableType.hpp
interpreter_tests/: CMakeLists.txt
interpreter_tests/lib/googletest/docs/: AdvancedGuide.md  V1_5_AdvancedGuide.md  V1_6_AdvancedGuide.md  V1_7_AdvancedGuide.md
interpreter_tests/lib/googletest/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-type-util.h.pump
interpreter_tests/tests/: CMakeLists.txt  interpreterTests.cpp
